syntax = "proto3";

import "google/protobuf/empty.proto";
import "v1/Span.proto";
import "v1/Stat.proto";
import "v1/Cmd.proto";

option java_multiple_files = true;
option java_package = "com.navercorp.pinpoint.grpc.trace";
option java_outer_classname = "ServiceProto";
option go_package = "/v1";

package v1;

service Span {
    rpc SendSpan (stream PSpanMessage) returns (google.protobuf.Empty) {
    }
}

service Agent {
    rpc RequestAgentInfo (PAgentInfo) returns (PResult) {
    }
    rpc PingSession (stream PPing) returns (stream PPing) {
    }
}

service Metadata {
    rpc RequestSqlMetaData (PSqlMetaData) returns (PResult) {
    }
    rpc RequestApiMetaData (PApiMetaData) returns (PResult) {
    }
    rpc RequestStringMetaData (PStringMetaData) returns (PResult) {
    }
}

service Stat {
    rpc SendAgentStat (stream PStatMessage) returns (google.protobuf.Empty) {
    }
}

service ProfilerCommandService {
    // deprecated api
    rpc HandleCommand (stream PCmdMessage) returns (stream PCmdRequest) {
        option deprecated = true;
    }

    rpc HandleCommandV2 (stream PCmdMessage) returns (stream PCmdRequest) {
    }

    rpc CommandEcho (PCmdEchoResponse) returns (google.protobuf.Empty) {
    }

    rpc CommandStreamActiveThreadCount (stream PCmdActiveThreadCountRes) returns (google.protobuf.Empty) {
    }

    rpc CommandActiveThreadDump (PCmdActiveThreadDumpRes) returns (google.protobuf.Empty) {
    }

    rpc CommandActiveThreadLightDump (PCmdActiveThreadLightDumpRes) returns (google.protobuf.Empty) {
    }
}